ExerciseInputInfo-RecommendForm css 수정

--- a/src/components/layout/Header/Notification/BellNotifications.module.css
+++ b/src/components/layout/Header/Notification/BellNotifications.module.css
@@ -31,14 +31,10 @@
     display: flex;
     justify-content: baseline;
 }
-p {
+.bottomArea p {
     margin-bottom: 1rem;
 }
 .allDeleteBtn {
     display: flex;
     justify-content: end;
-}
-
-.button{
-    
 }
