--- a/src/components/blog/IntroduceEdit/IntroduceEdit.module.css
+++ b/src/components/blog/IntroduceEdit/IntroduceEdit.module.css
@@ -8,11 +8,11 @@
     width: 100%;
     height: 7rem;
     text-align: center;
-    border: 1px solid;
 }
 
 .buttonArea {
     padding-left: 15rem;
+    margin-top: 0.1rem;
 }
 
 .buttonArea button {
